# centipede_models

centipede_description/: CMakeLists.txt  package.xml
centipede_description/launch/: launchfile.launch
centipede_description/scripts/: centipede_front_back_fsm_node.py  centipede_fsm_node.py  centipede_left_right_fsm_node.py  centipede_odd_even_fsm_node.py  centipede_odd_even_groups_fsm_node.py  centipede_staggered_fsm_node.py  centipede_sym_all_at_once_fsm_node.py  centipede_sym_odd_even_fsm_node.py  centipede_sym_staggered_fsm_node.py  centipede_sym_staggered_triplets_fsm_node.py  centipede_tripod_direct_leg_ctrl_fsm_node.py  key_publisher.py  leg_pair_state_machine.py  (+10 more)
centipede_gazebo/: CMakeLists.txt  package.xml
centipede_gazebo/launch/: centipede_03_a_2.launch  centipede_03_b.launch  centipede_03_c.launch  centipede_03_d.launch  centipede_03_e_01.launch  centipede_03_e_02.launch  centipede_03_f_0.launch  centipede_03_f_1.launch  centipede_04_a_01.launch  centipede_05_a_01.launch  centipede_05_b_01.launch  centipede_05_b_02.launch  centipede_06_a_01.launch  centipede_06_a_02.launch  centipede_07_a_01.launch  centipede_07_b_01.launch  centipede_07_c_01.launch  centipede_07_c_02.launch  centipede_07_d_01.launch  centipede_07_d_02.launch  centipede_07_e_01.launch  centipede_07_e_02_teleoperated_centipede_rough_cut.launch  centipede_07_e_03_keyboard_teleoperated_centipede.launch  centipede_07_f_01.launch  centipede_08_a_01.launch  centipede_09_a_01.launch  leg_pair_state_machine_01.launch  leg_pair_state_machine_02.launch  multiple_leg_pair_state_machine_01.launch
(+20 files in other folders)
